--- a/wmp-fe-2/package.json
+++ b/wmp-fe-2/package.json
@@ -9,6 +9,8 @@
     "react-dom": "^16.7.0",
     "react-notifications-component": "^1.0.1",
     "react-redux": "^6.0.0",
+    "react-redux-notification": "^0.0.1",
+    "react-redux-notify": "^4.1.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "redux": "^4.0.1",
